# stable-eureka

./: .gitignore  FDRE-HRDC公式化交付说明.md  README.md  cleanup_to_final_eg_rsa_framework.sh  config_cleanup_manifest_20260612_174933.md  delivery_index.md  eg_rsa_ch1_ch3_draft.md  eg_rsa_experiment_and_ablation_plan.md  eg_rsa_framework_position.md  eg_rsa_related_work_map.md  eg_rsa_v1_v2_experiment_analysis.md  fix_check_eureka_step_input_path.sh  fix_py38_memory_typehint.sh  patch_clean_experiment_entrypoints.sh  patch_clean_feedback_reflection_hardening.sh  patch_clean_reward_framework.sh  patch_deepseek_empty_response_and_extractor.sh  patch_deepseek_lunar_and_summary.sh  patch_deepseek_provider.sh  patch_eg_rsa_edit_contract_fix.sh  patch_eg_rsa_full_memory_framework.sh  patch_eg_rsa_quality_gate_v1.sh  patch_eg_rsa_quality_gate_v1_1.sh  patch_eg_rsa_quality_gate_v1_2.sh  patch_eg_rsa_quality_gate_v1_3.sh  patch_eg_rsa_two_stage_interface.sh  patch_general_semantic_anonymization.sh  patch_leak_audit_hardening.sh  patch_multiseed_clean_experiments.sh  patch_repair_agent.sh  patch_restore_eureka_exact_step_input.sh  patch_singlechain_rlzoo_ppo_v1.sh  patch_split_semantic_warning_audit.sh  run_bootstrap_then_landing_10iter_6seeds_2M.sh  run_landing_10iter_5seeds.sh  run_landing_long_3seeds.sh  run_mvp.py  train_eg_rsa.py  weekly_report_2025-06-12.md  交付包目录.md  (+1 more)
code/: README.md  code_delivery.md  config.example.json  pyproject.toml  requirements.txt
code/configs/: acrobot_stress.json  bipedalwalker.json  cartpole_stress.json  lunarlander.json  lunarlander_paper.json  (+2 more)
(+3239 files in other folders)
