[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-reward-evolver"
version = "0.1.0"
description = "Minimal FDRE + HRDC framework for LLM-generated RL reward functions."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "requests>=2.31",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
]
box2d = [
    "gymnasium[box2d]>=0.29",
]

[tool.setuptools.packages.find]
where = ["src"]

